added camera page

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -2,7 +2,7 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <ion-content class="has-header">
+  <ion-content padding="true" class="has-header">
     <h1>Erinnerungen</h1>
     <div>
         Diese Demo ist für den Cross-Plattform Workshop des Technical Summit 2014 entwickelt worden. Die Anwendung basiert auf dem Ionic Sidemenu Template.
