--- a/www/templates/memories.html
+++ b/www/templates/memories.html
@@ -2,9 +2,9 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <ion-content class="has-header">
+  <ion-content padding="true" class="has-header">
     <div class="list card" ng-repeat="memory in vm.memories">
-      <a class="item" href="#/app/memories/{{memory.id}}">        
+      <a class="item item-thumbnail-left" href="#/app/memories/{{memory.id}}">        
         <img src="#">
         <h2>{{memory.title}}</h2>
         <p>Some text here...</p>
