--- a/www/templates/memory.html
+++ b/www/templates/memory.html
@@ -1,5 +1,5 @@
 <ion-view title="Erinnerung" ng-controller="MemoryPageController as vm">
-  <ion-content class="has-header">
+  <ion-content padding="true" class="has-header">
     <h1>Playlist</h1>
     <div class="list card">
 
