--- a/www/templates/memory.html
+++ b/www/templates/memory.html
@@ -1,16 +1,15 @@
 <ion-view title="Erinnerung" ng-controller="MemoryPageController as vm">
   <ion-content padding="true" class="has-header">
-    <h1>Playlist</h1>
     <div class="list card">
 
       <div class="item item-avatar">
         <img src="mcfly.jpg">
-        <h2>Marty McFly</h2>
+        <h2>{{vm.memory.title}}</h2>
         <p>November 05, 1955</p>
       </div>
 
       <div class="item item-body">
-        <img class="full-image" src="delorean.jpg">
+        <img class="full-image" ng-src="{{vm.memory.image}}">
         <p>
           This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
           the content is from a card-body consisting of an image and paragraph text. The footer
