--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -20,7 +20,7 @@
           Hinzufügen
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/playlists">
-          Playlists
+          Erinnerungen
         </ion-item>
       </ion-list>
     </ion-content>
